<resources>
    <string name="app_name">HDWallpaper</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_detail">Detail</string>
    <string name="title_activity_about_us">AboutUsActivity</string>


    <!--Menu Navigation Drawer-->
    <string name="menu_latest">Latest</string>
    <string name="menu_category">Category</string>
    <string name="menu_gif">GIFs</string>
    <string name="menu_my_favorite">My Favorite</string>
    <string name="menu_rate_app">Rate App</string>
    <string name="menu_more_app">More App</string>
    <string name="menu_about_us">About Us</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_privacy">Privacy Police</string>


    <!--Main Screen-->




    <!--Detail Screen-->
</resources>
