<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_latest"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_latest" />
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_category" />
        <item
            android:id="@+id/nav_gif"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_gif" />
        <item
            android:id="@+id/nav_my_favorite"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_my_favorite" />
        <item
            android:id="@+id/nav_rate_app"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_rate_app" />
        <item
            android:id="@+id/nav_more_app"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_more_app" />
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_about_us" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_privacy"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_privacy" />
    </group>

    <!--<item android:title="Communicate">-->
    <!--<menu>-->
    <!--<item-->
    <!--android:id="@+id/nav_share"-->
    <!--android:icon="@drawable/ic_menu_share"-->
    <!--android:title="Share" />-->
    <!--<item-->
    <!--android:id="@+id/nav_send"-->
    <!--android:icon="@drawable/ic_menu_send"-->
    <!--android:title="Send" />-->
    <!--</menu>-->
    <!--</item>-->

</menu>
